se agregaron los permisos por usuario unitariamente , activdad ,mapa , geolocalizacion , mapa